--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -30,9 +30,8 @@
 						<h1 class="text-light">School Term Programs</h1>
 						<p class="lead">
 							Our core programs run according to the school terms. 10-week ‘curriculums’ designed to afford us the time to
-						focus on long-term player development.
-						These programs give us the opportunity to get to know the player and better identify their strengths and
-						weaknesses with the ball.
+						focus on individual long-term player development.
+						Our ciriculums are 'mirrored' right through the Academy. i.e. The U7 - U8 session design will be the same as the U11 - U12 on that night.
 						</p>
 					</div>
 				</div>
@@ -47,18 +46,13 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						<b>U7's - U8's:</b> A typical term curriculum has approximately a 70/30 split. 60-70% of our 10-week term sessions are spent working on 1v1 related exercises, 
-						ensuring the individual player is on the ball for the maximum amount of time.
-						E.g., dribbling, ball mastery, defending, tricks and turns, as well as space utilisation when attacking.
-						The other 30-40% of our allocated term sessions focus on passing and all it’s aspects. This latter component of the curriculum has a 2 v 1’s and 3 v 2’s flavour to it.</p>
-					<p class="lead">
-						<b>U9's - U12's:</b> A typical term follows a rotational timetable, covering five main modules. (1) Dribbling and Ball Mastery (2) Attacking (3) Passing and Ball Control
+						<b>U7's - U12's:</b> A typical term follows a rotational timetable, covering five main modules. (1) Dribbling and Ball Mastery (2) Attacking (3) Passing and Ball Control
 						(4) Possession (5) Defending. We believe mastering each of these modules best prepares the player for their teenager years when tactics and performance based 11-aside games become the primary focus during player development. </p>  
 
 
 					<h3> Pricing and Player Commitments </h3>
 					<p class="lead">
-						Click on <a href="Pricing">Pricing</a> for up-to-date Academy costs. </p>
+						Pricing can vary slightly term-to-term. It's best to check our Facebook page for the latest term's pricing. </p>
 					<p class="lead">
 						All term programs have a minimum commitment of 1 session per week for that term i.e., 10 sessions. </p>
 					<p class="lead">
