--- a/SchoolTerms.html
+++ b/SchoolTerms.html
@@ -31,7 +31,7 @@
 						<p class="lead">
 							Our core programs run according to the school terms. 10-week ‘curriculums’ designed to afford us the time to
 						focus on individual long-term player development.
-						Our ciriculums are 'mirrored' right through the Academy. i.e. The U7 - U8 session design will be the same as the U11 - U12 on that night.
+						Our curriculums are 'mirrored' right through the Academy. i.e. The U7 - U8 session design will be the same as the U11 - U12 on that night.
 						</p>
 					</div>
 				</div>
