--- a/OurPhilosophy.html
+++ b/OurPhilosophy.html
@@ -28,7 +28,7 @@
 						<h1 class="text-light">Our Philosophy</h1>
 						<p class="lead">
 							At Foot and Ball Academy, our primary goal is to help players develop a sustainable desire to
-							participate in the World Game, know as football. We endeavour to create a healthy
+							participate in the World Game, known as football. We endeavour to create a healthy
 							environment, where players are taught to understand and then handle the competitive aspects of
 							the game, in the hopes they continue to play well into their adult lives.
 						</p>
@@ -75,7 +75,7 @@
 							experience. However, <strong>we do not tolerate bad attitude, arrogant, lazy, or casual players.</strong> 
 							At Foot and Ball Academy self-improvement is a player’s primary challenge.
 						<p class="lead">
-							<em>“How good you were yesterday is yesterday’s achievement. Not todays.” - Coach Nick </em></p>
+							<em>“How good your child was yesterday is yesterday’s achievement. Not today's.” - Coach Nick </em></p>
 
 						</p>
 					</div>
@@ -115,8 +115,8 @@
 
 					<div class="col-lg-6 col-md-6  align-self-center">
 						<h2 class="text-dark">Session Guidelines</h2>
-						<p class="lead">As a brand-new Academy, we take session strcuture seriously. 
-							At a minimum, if the player absorbs nothing else they will learn that a session has three primary compnents.
+						<p class="lead">As a brand-new Academy, we take session structure and participation seriously. 
+							At a minimum, if the player absorbs nothing else they will learn that a session has three primary components.
 							Below is a guideline for most** sessions for players U6's and above:</p>
 
 						<h3 class="text-dark">The Warmup:</h3>
@@ -141,19 +141,19 @@
 
 						<h3 class="text-dark">Session theme:</h3>
 						<p class="lead">
-							Is the focus of the week: passing? Dribbling? Extended Ball Mastery? 1 v 1s? Whatever it may be this
+							Is the focus of the week: passing? Dribbling? Defending? Possession? Whatever it may be this
 							segment of the session delivers an engaging, inclusive set of exercises designed to drive home the key
 							message of that week’s focus.</p>
 						<p>
 							Duration: ~15-20 minutes
 						</p>
 
-						<h3 class="text-dark">The 1 v 1 duels:</h3>
+						<h3 class="text-dark">The 'ending':</h3>
 						<p class="lead">
-							A very small, 1 on 1 style game. Two small goals. No long shots allowed. No Goalkeepers allowed.
-							This concluding aspect of a session allows the players to express themselves and the ideas they have
-							learnt or have been learning over previous sessions in a game-like environment. Scorelines are only
-							temporarily kept, incentivizing effort. The purpose of the duel is to allow the player access to
+							If there is time we like to finish with small-sided games, ideally 1 v 1 duels with small goals. Our Academy rules include: no long shots or clearances allowed. 
+							Nor, any Goalkeepers. This concluding aspect of a session allows the players to express themselves and the ideas they have
+							learnt or have been learning over previous sessions in a game-like environment. There are no scorelines kept. 
+							The purpose of the duel is to allow the player access to
 							something resembling a real game, without the added pressure. The desired outcome is
 							improvement where it matters most, playing!</p>
 						<p>
