--- a/Staff.html
+++ b/Staff.html
@@ -45,14 +45,17 @@
 				<div class="col-lg-6 col-md-6  align-self-center">
 					<h1>Head Coach and Founder</h1>
 					<p class="lead">
-					<p class="lead">
-						My background and pathway into soccer coaching is rather unorthodox.
+						My background and pathway into coaching is rather unorthodox. Entering the industry at a later stage in life.
 						Well-travelled and educated, I believe my life experiences outside of football will contribute as much as my
 						player experiences to coaching.
-						Joining the industry at a later stage in life, I have reflected carefully on my motivations for doing this,
+						I have reflected carefully on my motivations for doing this,
 						and want to ensure everyone that my main goal is to provide a coaching environment I now realise is
 						important,
 						and never received in my youth. e.g. improvment over winning. </p>
+						<p class="lead">
+						I have been described by some parents as 'tough but fair.' 
+						I sincerely want the best for whoever I coach becuase I am aware of how competative it is out there. 
+						I believe every child should be prepared to cope with playing against and amoungst a wide range of their peers, nationally.</p>
 					<h2>Playing History (2000 – 2011)</h2>
 					<p class="lead">
 						Representative football (now NPL) from U/13’s. </p>
@@ -83,7 +86,7 @@
 						undergraduates and industry professionals. Class preparation, content design and delivery, solicting of
 						feedback, all to a wide cohort of students with different backgrounds and goals.
 					<p class="lead">
-						(2022 – current) Kids soccer-football coach.</p>
+						(2022 – current) Kids football coach.</p>
 
 					</p>
 					<h2>Qualifications</h2>
