--- a/Staff.html
+++ b/Staff.html
@@ -54,8 +54,8 @@
 						and never received in my youth. e.g. improvment over winning. </p>
 						<p class="lead">
 						I have been described by some parents as 'tough but fair.' 
-						I sincerely want the best for whoever I coach becuase I am aware of how competative it is out there. 
-						I believe every child should be prepared to cope with playing against and amoungst a wide range of their peers, nationally.</p>
+						I sincerely want the best for whoever I coach because I am aware of how competative it is out there. 
+						I believe every child should be prepared to feel comfortable playing against and amoungst a wide range of their peers in any environment.</p>
 					<h2>Playing History (2000 – 2011)</h2>
 					<p class="lead">
 						Representative football (now NPL) from U/13’s. </p>
