--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
 					<br>
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
-						Think of us like a “primary school” for football, i.e. six y/o and up. </p>
-					<p class="lead mt-2"> We also offer specialized 1-on-1 training sessions for teenagers i.e. U13’s – U18’s. Targeted at those searching for upgrades inside their own individual games.
+						Think of us like a “primary school” for football, i.e. six y/o to 12 y/o. </p>
+					<p class="lead mt-2"> Due to time and staffing restrctions we currently only offer elite level sessions. Targetting those players that are ambitious and 'hungry' to improve.
+					</p>
+					<p class="lead mt-2"> We feel players that join earlier instead of later i.e. from U7's tend to benefit most from adjusting to these standards much easier.
 					</p>
 					<a href="register.html" class="btn btn-info">Register Now</a>
 					<br>
