--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 					<h3>Our Mission</h3>
 					<p class="lead mt-2"> We are an educational establishment focused on long-term individual player development. 
 						Think of us like a “primary school” for football, i.e. six y/o to 12 y/o. </p>
-					<p class="lead mt-2"> Due to time and staffing restrctions we currently only offer elite level sessions. Targetting those players that are ambitious and 'hungry' to improve.
+					<p class="lead mt-2"> Due to time and staffing restrictions we currently only offer elite level sessions. Targetting those players that are ambitious and 'hungry' to improve.
 					</p>
-					<p class="lead mt-2"> We feel players that join earlier instead of later i.e. from U7's tend to benefit most from adjusting to these standards much easier.
+					<p class="lead mt-2"> We feel players that join earlier instead of later i.e. from U7's, tend to benefit the most from these standards as they can adjust much easier.
 					</p>
 					<a href="register.html" class="btn btn-info">Register Now</a>
 					<br>
@@ -125,6 +125,7 @@
 					<br>
 					<h3>Meet our Founder</h3>
 					<p class="lead mt-2">Nick has dedicated Foot and Ball Academy to incorporating the latest trends in footballing education from around the world.</p>
+					<p class="lead mt-2">He endeavours to always find suitable citations, globally, for all the philosophies, curriculums, and session designs he puts on for the players.</p>
 					<a target="_blank" href="Staff.html">
 						<img src="./img/nick.jpg" alt="Forest" style="width:150px">
 					</a>
