Updated fabfc with links

--- a/fabfc/index.html
+++ b/fabfc/index.html
@@ -1,1 +1,6 @@
 Foot and Ball Flash Cards
+
+<a href="https://footandball.com.au/fabfc/privacy">fabFC privacy collection.</a>
+<br>
+<a href="https://footandball.com.au">Foot and Ball Academy.</a>
+
