--- a/register.html
+++ b/register.html
@@ -46,25 +46,26 @@
 			<div class="row">
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/Gx7B6pKRcH">
+						<a href="https://forms.office.com/r/cYhJ3EdC65">
 						<img src="img/t4.24.website.header.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 4, 2024</h2>
-							<p class="card-text">Click REGISTER NOW to enrol for the latest school term </p>
-							<a href="https://forms.office.com/r/Gx7B6pKRcH"
+							<p class="card-text">January holiday sessions click below </p>
+							<a href="https://forms.office.com/r/cYhJ3EdC65"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-				<img src="img/stock5.jpg" style="max-height:300px" class="card-img-top" alt="January 2024 Holidays"></a>
+						<a href="https://forms.office.com/r/cYhJ3EdC65">
+						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">TBA</h2>
-							<p class="card-text">Find out more about us --><a href="OurPhilosophy.html"
-									class="link-secondary">Read more...</a></p>
-							<a href="" class="btn btn-info disabled" aria-disabled="true">Coming soon..</a>
+							<h2 class="card-title">January Holidays, 2025</h2>
+							<p class="card-text">Holiday sessions registration click below </p>
+							<a href="https://forms.office.com/r/cYhJ3EdC65"
+								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div> 
