--- a/register.html
+++ b/register.html
@@ -46,12 +46,12 @@
 			<div class="row">
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/cYhJ3EdC65">
+						<a href="https://forms.office.com/r/ZwceNkxWtR">
 						<img src="img/term.enroll.website.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 4, 2024</h2>
-							<p class="card-text">Term 4 sessions, click below </p>
-							<a href="https://forms.office.com/r/cYhJ3EdC65"
+							<h2 class="card-title">Term 1, 2025</h2>
+							<p class="card-text">For the latest term, click below </p>
+							<a href="https://fhttps://forms.office.com/r/ZwceNkxWtR"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
@@ -63,7 +63,7 @@
 						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Holiday Sessions"></a>
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">January Holidays, 2025</h2>
-							<p class="card-text">Holiday sessions registration, click below </p>
+							<p class="card-text">For the latest holidays, click below </p>
 							<a href="https://forms.office.com/r/cYhJ3EdC65"
 								class="btn btn-info">Register Now</a>
 						</div>
