--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 1, 2025</h2>
 							<p class="card-text">For the latest term, click below </p>
-							<a href="https://fhttps://forms.office.com/r/ZwceNkxWtR"
+							<a href="https://forms.office.com/r/ZwceNkxWtR"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
