--- a/register.html
+++ b/register.html
@@ -46,12 +46,12 @@
 			<div class="row">
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/cM4dhK6md2" target="_blank">
+						<a href="https://footandball.com.au/" target="_blank">
 						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Easter Holidays (April 2025)</h2>
-							<p class="card-text">To register, click below </p>
-							<a href="https://forms.office.com/r/cM4dhK6md2" target="_blank"
+							<h2 class="card-title">Easter Holidays Coming Soon</h2>
+							<p class="card-text">Regsitrations NOT open, yet </p>
+							<a href="https://footandball.com.au/" target="_blank"
 								class="btn btn-info">Register Now</a>
 						</div>
 					</div>
