--- a/register.html
+++ b/register.html
@@ -59,12 +59,12 @@
 
 					<div class="col-md-6 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/5Ee58aiMcj" target="_blank">
+						<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank">
 						<img src="img/term_winter_enrollment.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 1 (wk 6 - 10), 2025</h2>
-							<p class="card-text">Starting March 10th, 2025, click below </p>
-							<a href="https://forms.office.com/r/5Ee58aiMcj" target="_blank" class="btn btn-info">Register Now</a>
+							<h2 class="card-title">Term 2, 2025</h2>
+							<p class="card-text">Starting April 28th, 2025, click below </p>
+							<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank" class="btn btn-info">Register Now</a>
 						</div>
 					</div>
 				</div> 
