--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -44,13 +44,13 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						During 2024, we are expanding our Academy's focus to include private 1-on-1 sessions for U13's - U18's.</p>
+						As of 2024, we are expanding our Academy's focus to include private 1-on-1 private sessions.</p>
 					<p class="lead">
-						1-on-1 sessions are customised to suit the requirements of the client and their specific training needs.</p>
+						1-on-1 sessions are customised to suit the requirements of the client (player) and their specific training needs.</p>
 					<p class="lead">
-						<b>These sessions will be delivered during weekday mornings from 7:00am - 8:00am.</b> </p>
-					<h4>A general notice: At this early stage of our journey, we do not currently have access to full sized goals. 
-						Therefore, shooting exercises that involve a proper game-like finish are unavailable at our current location.</h4>
+						<b>These sessions will be delivered around Academy hours at the convenience of both the client and coach.</b> </p>
+					<h4>A general notice: We do not currently have access to full sized goals. 
+						Therefore, shooting exercises that involve proper game-like finishing are unavailable at our current locations.</h4>
 					<p class="lead">
 						Below is more detail on what we offer:</p>
 
@@ -61,8 +61,9 @@
 					<p></p>
 					<ul>
 						<li>Age Category: Open to all ages.</li>
+						<li>Duration: 1 hour + warm up (5-10 minutes).</li>
 						<li>Suggested Focus: 13+ years old.</li>
-						<li>Price: $100 per session hour.</li>
+						<li>Price: Your first THREE 1-on-1 sessions are priced at $50. The remainder are priced at $75.</li>
 					</ul>
 
 					<h3>Coaching Courses (Coming Soon)</h3>
