--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -56,8 +56,8 @@
 
 					<h3>1-on-1 or 1-on-2 focus session</h3>
 					<p class="lead">
-						The traditional 1-on-1 or 1-on-2 sessions, focusing on a high-intensity footballing workout. Customised to the client’s needs, the session 
-						focuses on a balance between technical improvement as well as increases in fitness and concentration through high-intensity ball-related exercises.</p>
+						The traditional 1-on-1 or 1-on-2 sessions, focusing on a high-intensity footballing workout. Customised to the needs of the client, a session 
+						will focus on a balance between technical improvement as well as increases in fitness and concentration through high-intensity ball-related exercises.</p>
 					<p></p>
 					<ul>
 						<li>Age Category: Open to all ages.</li>
