--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 				<div class="col-xl-6">
 				<img src="img/soccer-ball-icon.png" alt="Your Icon" style="margin-top: 20px; width: 40px; height: 40px;">
 					<br>
-					<div class="fb-page" data-href="https://www.facebook.com/footandballacademy" data-show-posts="true" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" 	
+					<div class="fb-page" data-href="https://www.facebook.com/fab.academy.aus" data-show-posts="true" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" 	
 					data-width=500px width="500px" >
-						<blockquote cite="https://www.facebook.com/footandballacademy" class="fb-xfbml-parse-ignore">
-							<a href="https://www.facebook.com/footandballacademy">
+						<blockquote cite="https://www.facebook.com/fab.academy.aus" class="fb-xfbml-parse-ignore">
+							<a href="https://www.facebook.com/fab.academy.aus">
 								Foot and Ball Academy Facebook 
 							</a></blockquote>
 					</div>
