Made 3 cards and overfflow to 1 instead of 2x2

--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
 		<div class="container p-5">
 			
 			<div class="row">
-					<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank">
 						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
@@ -57,7 +57,7 @@
 					</div>
 				</div>
 
-					<div class="col-md-6 mb-3 d-flex align-items-stretch">
+					<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
 						<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank">
 						<img src="img/term_winter_enrollment.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
@@ -68,7 +68,7 @@
 						</div>
 					</div>
 				</div> 
-				<div class="col-md-6 mb-3 d-flex align-items-stretch">
+				<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
 						<img src="img/stock6.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
 						<div class="card-body d-flex flex-column">
