fixing buttons from bottom of card

--- a/register.html
+++ b/register.html
@@ -52,7 +52,9 @@
 							<h2 class="card-title">Easter Holidays 1 on 1 session</h2>
 							<p class="card-text">Call 0452 583 279 for consult.</p>
 							<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank"
-								class="btn btn-info">Register Now</a>
+   							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
+   							Register Now
+							</a>
 						</div>
 					</div>
 				</div>
@@ -64,7 +66,9 @@
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">Term 2, 2025</h2>
 							<p class="card-text">Starting April 28th, 2025, click below </p>
-							<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank" class="btn btn-info">Register Now</a>
+							<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank" 
+							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
+							Register Now</a>
 						</div>
 					</div>
 				</div> 
