--- a/register.html
+++ b/register.html
@@ -49,11 +49,11 @@
 						<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank">
 						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Easter Holidays 1 on 1 session</h2>
-							<p class="card-text">Call 0452 583 279 for consult.</p>
+							<h2 class="card-title">Easter Holidays (CLOSED)</h2>
+							<p class="card-text">CLOSED.</p>
 							<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank"
    							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
-   							Register Now
+   							CLOSED
 							</a>
 						</div>
 					</div>
@@ -77,9 +77,12 @@
 						<img src="img/stock6.jpg" style="max-height:300px" class="card-img-top" alt="Individual Player Development">
 						<div class="card-body d-flex flex-column">
 							<h2 class="card-title">1-on-1 Sessions</h2>
-							<p class="card-text">Our 1-on-1 privates. U12's - U18's. <a href="PrivateSessions.html" 
+							<p class="card-text">Consult one of our coaches first <a href="PrivateSessions.html" 
 									class="link-secondary">Read more...</a></p>
-							<a href="" class="btn btn-info disabled" aria-disabled="true">Call Us: 0452 583 279 </a>
+							<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank"
+   							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
+   							Register Now
+							</a>
 						</div>
 					</div>
 				</div>
