cleaning up navbar

--- a/navbar.html
+++ b/navbar.html
@@ -21,11 +21,10 @@
             Programs
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="subscribers.html">Academy Subscribers</a>
-            <a class="dropdown-item" href="SchoolTerms.html">School Terms</a>
+            <a class="dropdown-item" href="subscribers.html">Full time</a>
+            <a class="dropdown-item" href="SchoolTerms.html">Casual</a>
             <a class="dropdown-item" href="PrivateSessions.html">Private Sessions</a>
             <!-- <a class="dropdown-item" href="Highlights.html">Training Videos</a> -->
-            <a class="dropdown-item" href="register.html">Register Now</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -35,17 +34,16 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="ContactUs.html">Contact Us</a>
-            <a class="dropdown-item" href="Location.html">Location</a>
-            <a class="dropdown-item" href="OurPhilosophy.html">Our Philosophy</a>
+            <a class="dropdown-item" href="OurPhilosophy.html">Coaching Philosophy</a>
             <a class="dropdown-item" href="Staff.html">Staff</a>
             <a class="dropdown-item" href="Privacy.html">Privacy</a>
             <a class="dropdown-item" href="TOS.html">Terms and Conditions</a>
           </div>
         </li>
 
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link" href="timetables.html">Timetables</a>
-        </li>
+        </li> -->
         <!-- <li class="nav-item">
           <a class="nav-link" href="ContactUs.html">Contact Us</a>
         </li> -->
