--- a/PrivateSessions.html
+++ b/PrivateSessions.html
@@ -44,9 +44,9 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12  align-self-center">
 					<p class="lead">
-						As of 2024, we are expanding our Academy's focus to include private 1-on-1 private sessions.</p>
+						As of 2024, we are expanding our Academy's focus to include private 1-on-1 sessions.</p>
 					<p class="lead">
-						1-on-1 sessions are customised to suit the requirements of the client (player) and their specific training needs.</p>
+						This style of session is customised to suit the requirements of the client (player) and their specific training needs.</p>
 					<p class="lead">
 						<b>These sessions will be delivered around Academy hours at the convenience of both the client and coach.</b> </p>
 					<h4>A general notice: We do not currently have access to full sized goals. 
