--- a/register.html
+++ b/register.html
@@ -46,12 +46,12 @@
 			<div class="row">
 					<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank">
+						<a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank">
 						<img src="img/hols.website.banner.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Easter Holidays (CLOSED)</h2>
-							<p class="card-text">CLOSED.</p>
-							<a href="https://forms.office.com/r/v87P9vk9n0" target="_blank"
+							<h2 class="card-title">July 2025 Holidays (OPEN)</h2>
+							<p class="card-text">Register Now</p>
+							<a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank"
    							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
    							CLOSED
 							</a>
@@ -64,7 +64,7 @@
 						<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank">
 						<img src="img/term_winter_enrollment.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 2, 2025</h2>
+							<h2 class="card-title">Term 2, 2025 (OPEN)</h2>
 							<p class="card-text">Starting April 28th, 2025, click below </p>
 							<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank" 
 							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
