--- a/register.html
+++ b/register.html
@@ -53,7 +53,7 @@
 							<p class="card-text">Register Now</p>
 							<a href="https://forms.office.com/r/6fUJt0j4Kk" target="_blank"
    							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
-   							CLOSED
+   							Register Now
 							</a>
 						</div>
 					</div>
