--- a/register.html
+++ b/register.html
@@ -61,12 +61,12 @@
 
 					<div class="col-md-4 col-12 mb-3 d-flex align-items-stretch">
 					<div class="card text-center" style="width:100%">
-						<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank">
+						<a href="https://forms.office.com/r/xmXftTU5w9" target="_blank">
 						<img src="img/term_winter_enrollment.png" style="max-height:300px" class="card-img-top" alt="Progressive Training Programs"></a>
 						<div class="card-body d-flex flex-column">
-							<h2 class="card-title">Term 2, 2025 (OPEN)</h2>
-							<p class="card-text">Starting April 28th, 2025, click below </p>
-							<a href="https://forms.office.com/r/1nzU1NtLRD" target="_blank" 
+							<h2 class="card-title">Term 3, 2025 (OPEN)</h2>
+							<p class="card-text">Starting July 21st, 2025, click below </p>
+							<a href="https://forms.office.com/r/xmXftTU5w9" target="_blank" 
 							class="btn btn-info mt-auto" style="margin-top: auto; margin-bottom: 20px;">
 							Register Now</a>
 						</div>
