--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,7 @@
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
              onmouseout="this.style.color='white';">
-             Help! I'm New.
+             Help! I'm New
           </a>
         </li>
         <li class="nav-item" style="margin: 0 15px;">
