--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
 
         <!-- New direct links with some spacing and inline hover color -->
         <li class="nav-item" style="margin: 0 15px;">
-          <a class="nav-link" href="Help_Im_New.html" 
+          <a class="nav-link" href="help_im_new.html" 
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
              onmouseout="this.style.color='white';">
