--- a/navbar.html
+++ b/navbar.html
@@ -22,7 +22,7 @@
           </a>
         </li>
         <li class="nav-item" style="margin: 0 15px;">
-          <a class="nav-link" href="CoachingPhilosophy.html" 
+          <a class="nav-link" href="OurPhilosophy.html" 
              style="color: white;" 
              onmouseover="this.style.color='#FFD700';" 
              onmouseout="this.style.color='white';">
